--- a/Dashboard/Resources/ResourcesFile.ar.resx
+++ b/Dashboard/Resources/ResourcesFile.ar.resx
@@ -1373,6 +1373,7 @@
   </data>
   <data name="Fk_TeamGameWeaks" xml:space="preserve">
     <value>الماتشات</value>
+	  </data>
   <data name="Discount1" xml:space="preserve">
     <value>الخصم</value>
   </data>
