--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -1322,9 +1322,9 @@
   </data>
   <data name="Fk_TeamGameWeaks" xml:space="preserve">
     <value>Team Game Weaks</value>
-	  </data>
+  </data>
   <data name="Discount" xml:space="preserve">
-    <value>Discount</value>
+    <value>Discount (%)</value>
   </data>
   <data name="ExpirationDate" xml:space="preserve">
     <value>Expiration Date</value>
