--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -1383,4 +1383,7 @@
   <data name="Fk_PlayerMarkReasonMatches" xml:space="preserve">
     <value>Player Mark Reason Matches</value>
   </data>
+  <data name="_365_CompetitionsId" xml:space="preserve">
+    <value>League reference number</value>
+  </data>
 </root>
