--- a/Dashboard/Resources/ResourcesFile.ar.resx
+++ b/Dashboard/Resources/ResourcesFile.ar.resx
@@ -1434,4 +1434,10 @@
   <data name="_365_CompetitionsId" xml:space="preserve">
     <value>الرقم المرجعي للدوري</value>
   </data>
+  <data name="FavouriteSeason" xml:space="preserve">
+    <value>الموسم المفضل</value>
+  </data>
+  <data name="Fk_Subscription" xml:space="preserve">
+    <value>الاشتراك</value>
+  </data>
 </root>
