--- a/API/Resources/ResourcesFile.ar.resx
+++ b/API/Resources/ResourcesFile.ar.resx
@@ -120,6 +120,9 @@
   <data name="Account already registered!" xml:space="preserve">
     <value>الحساب مسجل بالفعل!</value>
   </data>
+  <data name="Email Address already registered!" xml:space="preserve">
+    <value>عنوان البريد الإلكتروني مسجل بالفعل!</value>
+  </data>
   <data name="Email address not valid!" xml:space="preserve">
     <value>عنوان البريد الإلكتروني غير صالح!</value>
   </data>
@@ -140,6 +143,9 @@
   </data>
   <data name="Payments have something wrong. try again later!" xml:space="preserve">
     <value>المدفوعات بها شيء خاطئ. حاول مرة أخرى في وقت لاحق!</value>
+  </data>
+  <data name="Phone Number already registered!" xml:space="preserve">
+    <value>رقم الهاتف مسجل بالفعل!</value>
   </data>
   <data name="Please add an email address to your account!" xml:space="preserve">
     <value>يرجى إضافة عنوان بريد إلكتروني فى حسابك!</value>
