--- a/API/Resources/ResourcesFile.en.resx
+++ b/API/Resources/ResourcesFile.en.resx
@@ -120,6 +120,9 @@
   <data name="Account already registered!" xml:space="preserve">
     <value>The account is already registered!</value>
   </data>
+  <data name="DateTo" xml:space="preserve">
+    <value>Date To</value>
+  </data>
   <data name="Email address not valid!" xml:space="preserve">
     <value>The email address is not valid!</value>
   </data>
