--- a/API/Resources/ResourcesFile.ar.resx
+++ b/API/Resources/ResourcesFile.ar.resx
@@ -174,6 +174,9 @@
   <data name="Season not started yet!" xml:space="preserve">
     <value>الموسم لم يبدأ بعد!</value>
   </data>
+  <data name="Teams will appear after the first round ends" xml:space="preserve">
+    <value>سيتم ظهور الفرق بعد انتهاء الجوله الاولي</value>
+  </data>
   <data name="The code is incorrect!" xml:space="preserve">
     <value>الكود غير صحيح!</value>
   </data>
