--- a/Dashboard/Resources/ResourcesFile.ar.resx
+++ b/Dashboard/Resources/ResourcesFile.ar.resx
@@ -1486,6 +1486,6 @@
     <value>عدد الاشتراكات النشطة</value>
   </data>
   <data name="GoldSubscriptionsCount" xml:space="preserve">
-    <value>عدد العضويات الذهبية</value>
+    <value>عدد العضويات الذهبية النشطة</value>
   </data>
 </root>
