--- a/Dashboard/Resources/ResourcesFile.ar.resx
+++ b/Dashboard/Resources/ResourcesFile.ar.resx
@@ -1162,7 +1162,7 @@
     <value>التكلفة بعد الخصم</value>
   </data>
   <data name="Discount" xml:space="preserve">
-    <value>قيمة الخصم</value>
+    <value>قيمة الدفع</value>
   </data>
   <data name="ForAction" xml:space="preserve">
     <value>للبروموكود</value>
@@ -1487,5 +1487,11 @@
   </data>
   <data name="GoldSubscriptionsCount" xml:space="preserve">
     <value>عدد العضويات الذهبية النشطة</value>
+  </data>
+  <data name="BuyingCount" xml:space="preserve">
+    <value>عدد الشراء</value>
+  </data>
+  <data name="SellingCount" xml:space="preserve">
+    <value>عدد البيع</value>
   </data>
 </root>
