--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -1443,4 +1443,10 @@
   <data name="SellingCount" xml:space="preserve">
     <value>Selling Count</value>
   </data>
+  <data name="DateTo" xml:space="preserve">
+    <value>Date To</value>
+  </data>
+  <data name="Notes" xml:space="preserve">
+    <value>Notes</value>
+  </data>
 </root>
