--- a/Dashboard/Resources/ResourcesFile.en.resx
+++ b/Dashboard/Resources/ResourcesFile.en.resx
@@ -1452,4 +1452,16 @@
   <data name="UseCards" xml:space="preserve">
     <value>Use Cards</value>
   </data>
+  <data name="CommunicationStatus" xml:space="preserve">
+    <value>Communication Status</value>
+  </data>
+  <data name="CommunicationStatuses" xml:space="preserve">
+    <value>Communication Statuses</value>
+  </data>
+  <data name="CommunicationStatusComment" xml:space="preserve">
+    <value>Communication Status Comment</value>
+  </data>
+  <data name="Fk_CommunicationStatuses" xml:space="preserve">
+    <value>Communication Statuses</value>
+  </data>
 </root>
